2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/13_CastClass.deca
// Description:
//    Programme : utilisation du cating entre les classes
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 15/01/2024
class A {
    int x;
}

class B {
}

{
    B a = new B();
    A b = (A)(a);
}